Table users {
  id serial [pk, increment]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  username varchar(30) [not null]
  bio varchar(400)
  avatar varchar(200)
  phone varchar(25)
  email varchar(40)
  password varchar(50)
  status varchar(15)
}

Table posts {
  id serial [pk, increment]
  created_at timestamp
  updated_at timestamp
  url varchar(200)
  user_id integer [ref: > users.id]
  caption varchar(240)
  lat REAL
  long REAL
}

Table comments {
  id serial [pk, increment]
  created_at timestamp
  updated_at timestamp
  contents varchar(240)
  user_id integer [ref: > users.id]
  post_id integer [ref: > posts.id]
}

Table likes {
  id serial [pk, increment]
  created_at timestamp
  user_id integer [ref: > users.id]
  comment_id integer [ref: > comments.id]
  post_id integer [ref: > posts.id]
}

Table photo_tags {
  id serial [pk, increment]
  created_at timestamp
  updated_at timestamp
  user_id integer [ref: > users.id]
  post_id integer [ref: > posts.id]
  x integer
  y integer
}

Table caption_tags {
  id serial [pk, increment]
  created_at timestamp
  user_id integer [ref: > users.id]
  post_id integer [ref: > posts.id]
}

Table hashtags_posts {
  id serial [pk, increment]
  hashtag_id integer [ref: > hashtags.id]
  post_id integer [ref: > posts.id]
}

Table hashtags {
  id serial [pk, increment]
  created_at timestamp
  title varchar(20)
}

Table followers {
  id serial [pk, increment]
  created_at timestamp
  leader_id integer [ref: > users.id]
  follower_id integer [ref: > users.id]
}
